Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2053,9 +2053,9 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
-		/*overflow: hidden;*/
-		/*width: 300px;*/
-		/*height: 200px;*/
+		overflow: hidden;
+		/*width: 100%;*/
+		/*height: 100%;*/
 	}
 
 		.image:before {
@@ -2115,9 +2115,9 @@ input, select, textarea {
 		.image img {
 			border-radius: 0.35em;
 			display: block;
-			/*width: 100%;*/
-			/*height: 100%;*/
-			/*object-fit: cover;*/
+			width: 100%;
+			height: 100%;
+			object-fit: fill;
 		}
 
 		.image.left {
@@ -2136,9 +2136,13 @@ input, select, textarea {
 			max-width: 40%;
 		}
 
-			.image.left img, .image.right img {
-				width: 100%;
-			}
+		.image.top, .image.bottom {
+			max-width: 25%;
+		}
+
+		.image.left img, .image.right img {
+			width: 100%;
+		}
 
 		.image.fit {
 			display: block;
